--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "expo-dev-client": "~6.0.12"
   },
   "private": true
 }
