--- a/eas.json
+++ b/eas.json
@@ -4,19 +4,23 @@
     "appVersionSource": "remote"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
     "preview": {
-      "distribution": "internal",
-	  "android": {
+      "android": {
         "buildType": "apk"
       }
     },
-    "production": {
-      "autoIncrement": true
-    }
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {}
   },
   "submit": {
     "production": {}
