Revert "Adiciona suporte a deep linking e compartilhamento de URLs; implementa tratamento de URLs recebidas no App; atualiza configurações no app.json e adiciona dependência expo-linking."
This reverts commit e6b1893557205b95b968f5b1275e983a53685810.

--- a/app.json
+++ b/app.json
@@ -7,17 +7,13 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "scheme": "notemount",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "associatedDomains": [
-        "applinks:*"
-      ]
+      "supportsTablet": true
     },
     "android": {
 	  "versionCode": 2,
@@ -25,49 +21,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
-      "intentFilters": [
-        {
-          "action": "VIEW",
-          "autoVerify": true,
-          "data": [
-            {
-              "scheme": "https"
-            },
-            {
-              "scheme": "http"
-            }
-          ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
-        },
-        {
-          "action": "VIEW",
-          "data": [
-            {
-              "scheme": "notemount"
-            }
-          ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
-        },
-        {
-          "action": "SEND",
-          "data": [
-            {
-              "mimeType": "text/plain"
-            }
-          ],
-          "category": [
-            "DEFAULT"
-          ]
-        }
-      ],
-      "package": "com.wiris.notemountapp"
+      "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
